# medicine-ai-system

./: .gitignore  README.md
medicine-ai-agent/: .env.example  .gitignore  langgraph.json  pyproject.toml
medicine-ai-agent/app/: main.py
medicine-ai-agent/app/api/: main.py
medicine-ai-agent/app/core/: __init__.py  codes.py  langsmith.py  milvus.py  prompt_sync.py
medicine-ai-agent/app/rag/: __init__.py
medicine-ai-agent/app/repositories/: __init__.py  vector_repository.py
medicine-ai-agent/app/schemas/: admin_assistant_history.py  assistant_run.py  auth.py  base_request.py  client_assistant_submit.py  http_response.py  knowledge_import.py  memory.py  response.py  sse_response.py
medicine-ai-agent/app/services/: README.md  admin_assistant_service.py  assistant_message_service.py  auth_service.py  client_assistant_service.py  conversation_service.py  document_chunk_service.py  image_parse_service.py  knowledge_base_service.py  memory_service.py  memory_summary_service.py  message_service.py  message_tts_usage_service.py  speech_stt_service.py  summary_service.py  tool_trace_service.py
medicine-ai-agent/app/utils/: assistant_message_utils.py  chat_image_utils.py  download_storage.py  file_utils.py  http_client.py  list_utils.py  prompt_section_utils.py  prompt_utils.py  resource_text_utils.py  snowflake.py  token_utills.py
medicine-ai-agent/resources/rate_limit/: sliding_window.lua
medicine-ai-agent/tests/: test.py  test_main_startup.py
medicine-ai-agent/tests/api/: test_assistant.py  test_assistant_run_routes.py  test_client_assistant.py  test_cors.py  (+4 more)
(+2205 files in other folders)
